# rubics

./: CMakeLists.txt  main.cc
